--- a/styles/index.css
+++ b/styles/index.css
@@ -112,9 +112,10 @@ div.mobile-menu-button.is-active span:nth-child(1) {
   top: 0;
   left: -100%;
   width: 100%;
-  height: calc(100vh + 70px);
+  height: 100vh;
   z-index: 2;
   background-color: rgba(29, 28, 27, 0.98);
+  transform: translateY(70px);
   transition: all 0.5s ease;
 }
 .mobile-nav p.itam {
@@ -128,7 +129,7 @@ div.mobile-menu-button.is-active span:nth-child(1) {
 
 .mobile-nav-list {
   position: absolute;
-  top: 200px;
+  top: 130px;
   left: 16px;
   display: flex;
   flex-direction: column;
